# XeChat

./: .gitmodules  CMakeLists.txt  README.md  move.sh
XeChat/: myModule.cpp  myModule.h
